syntax = "proto3";
option csharp_namespace = "nadena.dev.ndmf.proto";

package nadena.dev.ndmf.proto;

import "proto/base_types.proto";

message MeshRenderer {
  AssetID mesh = 1;
  repeated AssetID materials = 2;
  repeated ObjectID bones = 3;
  repeated float blendshape_weights = 4;
}

message VisibleInFirstPerson {
  bool visible = 1;
}

message RigRoot {
  ObjectID head = 1;
  ObjectID hand_left = 2;
  ObjectID hand_right = 3;
  
  Vector eye_position = 4;
}